tests/ui/diagnostic_namespace/do_not_recommend/does_not_acccept_args.next.stderr
error[E0565]: malformed `diagnostic::do_not_recommend` attribute input
  --> $DIR/does_not_acccept_args.rs:11:1
   |
LL | #[diagnostic::do_not_recommend(not_accepted)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^--------------^
   | |                             |
   | |                             didn't expect any arguments here
   | help: must be of the form: `#[diagnostic::do_not_recommend]`

error[E0565]: malformed `diagnostic::do_not_recommend` attribute input
  --> $DIR/does_not_acccept_args.rs:16:1
   |
LL | #[diagnostic::do_not_recommend(not_accepted = "foo")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^----------------------^
   | |                             |
   | |                             didn't expect any arguments here
   | help: must be of the form: `#[diagnostic::do_not_recommend]`

error[E0565]: malformed `diagnostic::do_not_recommend` attribute input
  --> $DIR/does_not_acccept_args.rs:21:1
   |
LL | #[diagnostic::do_not_recommend(not_accepted(42))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^------------------^
   | |                             |
   | |                             didn't expect any arguments here
   | help: must be of the form: `#[diagnostic::do_not_recommend]`

error[E0565]: malformed `diagnostic::do_not_recommend` attribute input
  --> $DIR/does_not_acccept_args.rs:26:1
   |
LL | #[diagnostic::do_not_recommend(x = y + z)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-----------^
   | |                             |
   | |                             didn't expect any arguments here
   | help: must be of the form: `#[diagnostic::do_not_recommend]`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0565`.
